<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mon memoire</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="charge">Chargement...</string>
    <string name="title_activity_acceuil">AcceuilActivity</string>
    <string name="titre">Rédiger mieux votre mémoire</string>
    <string name="tit">Rédiger mieux votre mémoire !</string>
    <string name="cont">Continuer</string>
    <string name="quit">Quitter</string>
    <string name="title_activity_sommaire">SommaireActivity</string>
    <string name="som">Sommaire</string>
    <string name="somm">SOMMAIRE</string>
    <string name="ret">Retour</string>
    <string name="quitter">bq</string>
    <string name="quitt">Quitter</string>
    <string name="title_activity_page_de_garde">PageDeGardeActivity</string>
    <string name="title_activity_remerciements">RemerciementsActivity</string>
    <string name="title_activity_dedicaces">DedicacesActivity</string>
    <string name="title_activity_table_des_matiere">TableDesMatiereActivity</string>
    <string name="title_activity_table_des_figures">TableDesFiguresActivity</string>
    <string name="title_activity_liste_des_tableaux">ListeDesTableauxActivity</string>
    <string name="title_activity_liste_des_abreviations">ListeDesAbreviationsActivity</string>
    <string name="title_activity_introduction_generale">IntroductionGeneraleActivity</string>
    <string name="title_activity_chapitres">ChapitresActivity</string>
    <string name="title_activity_conclusion_generale">ConclusionGeneraleActivity</string>
    <string name="title_activity_bibliographie">BibliographieActivity</string>
    <string name="title_activity_annexes">AnnexesActivity</string>
    <string name="pagedegarde">La page de garde doit comporter au minimum les éléments suivants :</string>
    <string name="pp">La page de garde doit comporter au minimum les éléments suivants :</string>
    <string name="tv">La page de garde doit comporter au minimum les éléments suivants :</string>
    <string name="jh">-Nom de l\'université et du département dans lequel le travail a été réalisé.</string>
    <string name="hg">-Titre/Thème .</string>
    <string name="br">Retour</string>
    <string name="bq">Quitter</string>
    <string name="nu">-Nom de l\'université et du département dans lequel le travail a été réalisé.</string>
    <string name="t">-Titre/Thème .</string>
    <string name="aut">-Auteurs.</string>
    <string name="enc">-Encadrant(s) éventuel(s) .</string>
    <string name="jury">-Membres du jury .</string>
    <string name="intit">"-Intitulé du type de mémoire "</string>
    <string name="niv">-Niveau et intitulé de la formation .</string>
    <string name="ann">-Année universitaire en cours.</string>
    <string name="remercier">Dans un mémoire, les remerciements sont traditionnellement placés en début de manuscrit, et mentionnent les personnes qui ont contribué au travail réalisé (encadrants, membres de jury, etc.). Il est fréquent de détailler les raisons pour lesquelles chaque personne est remerciée.</string>
    <string name="brte">Retour</string>
    <string name="bqtr">Quitter</string>
    <string name="qgs">les dédicaces sont des remerciements non scientifiques amis,famille...</string>
    <string name="pd">Les dédicaces sont des</string>
    <string name="dd">remerciements non scientifiques</string>
    <string name="td">(amis,famille,etc.)</string>
    <string name="brt">Retour</string>
    <string name="cgf">Quitter</string>
    <string name="tt">Une table des matières est nécessaire dans tout manuscrit</string>
    <string name="ttt">-Une table des matières est nécessaire dans tout manuscrit</string>
    <string name="xx">-Elle permet au lecteur d\'aller chercher des informations précises sans avoir besoin de tout lire.</string>
    <string name="d">-Les titres des chapitres et sections doivent donc être explicites.</string>
    <string name="retour">Retour</string>
    <string name="quitte">Quitter</string>
    <string name="dtr">-Si le manuscrit est volumineux, il est fréquent d\'ajouter une page séparée référençant les tableaux,</string>
    <string name="cn">et une autre référençant les figures.</string>
    <string name="r1">-Dans un mémoire, les remerciements sont traditionnellement placés en début de manuscrit.</string>
    <string name="r2">-et mentionnent les personnes qui ont contribué au travail réalisé (encadrants, membres de jury, etc.).</string>
    <string name="r3">-Il est fréquent de détailler les raisons pour lesquelles chaque personne est remerciée.</string>
    <string name="abr">Abréviations et symboles utiles</string>
    <string name="text">Abréviations et symboles utiles</string>
    <string name="tex">-Vous devez dresser une liste des abréviations ,</string>
    <string name="texte">-Vous devez dresser une liste des abréviations que vous avez utilisé,</string>
    <string name="tx2">pour expliquer leurs significations</string>
    <string name="btrt">Retour</string>
    <string name="btqt">Quitter</string>
    <string name="text1">-Vous devez aussi dressez une liste des abréviations</string>
    <string name="txt">-Vous devez aussi dresser une liste des abréviations, pour</string>
    <string name="txt2">-Vous devez aussi dresser une liste des abréviations, pour expliquer</string>
    <string name="txt3">la signification des abréviations que vous avez utilisé.</string>
    <string name="int1">L\'introduction générale est organisée comme suit :</string>
    <string name="in2">-Présentation du domaine ;</string>
    <string name="int3">-Défintion de la problématique;</string>
    <string name="int4">-Présentation et limites des solutions existantes ;</string>
    <string name="int5">-Objectifs du travail et comparaison avec l\'existant ;</string>
    <string name="int6">-Brève description du contenu chapitre par chapitre.</string>
    <string name="bre">Retour</string>
    <string name="butquitter">Quitter</string>
    <string name="co1">En général, la conclusion est organisée comme suit :</string>
    <string name="co2">-Résumé du travail et des contributions ;</string>
    <string name="co3">-Rappel des résultats principaux ;</string>
    <string name="co4">-Applications possibles des résultats (s\'il y a lieu) ;</string>
    <string name="co5">-Limitations de la solution proposée et perspectives (pistes pour d\'éventuels travaux futurs).</string>
    <string name="co6">Le texte de la conclusion doit rester neutre mais doit mettre en avant l\'apport de l\'auteur par rapport au sujet.</string>
    <string name="butret">Retour</string>
    <string name="butquit">Quitter</string>
    <string name="cs1">-Penser à la structure de son rapport avant de commencer à rédiger.</string>
    <string name="cs2">-Faire une rédaction pédagogique qui ne s\'adresse pas qu\'à des spécialistes du domaine ;</string>
    <string name="cs3">-Faire une présentation logique, non chronologique ;</string>
    <string name="cs4">-Bien formuler les titres ;</string>
    <string name="cs5">-Bien formuler les titres ;</string>
    <string name="cs6">-Réviser soigneusement l\'introduction et la conclusion ;</string>
    <string name="cs7">-Éviter le copier/coller ;</string>
    <string name="cs8">-Éviter d\'ajouter les références une fois la rédaction achevée;</string>
    <string name="cs9">-Éviter d\'ajouter les références une fois la rédaction achevée;</string>
    <string name="cs10">-Réviser l\'orthographe et la grammaire ;</string>
    <string name="cs11">Soigner l\'aspect graphique du document.</string>
    <string name="butretour">Retour</string>
    <string name="butr">Retour</string>
    <string name="butq">Quitter</string>
    <string name="butqt">Quitter</string>
    <string name="ch1">-Les paragraphes doivent être écrits avec \"Times New Roman\" police 12.</string>
    <string name="ch3">-collecter les idées nécessaires et éviter le copier coller</string>
    <string name="title_activity_mise_en_page">MiseEnPageActivity</string>
    <string name="mp1">-Document en recto simple et format A4 ;</string>
    <string name="mp2">-Marges de 2.5cm (haut, bas, droite, gauche) ;</string>
    <string name="mp3">-Police de taille 12 points et interligne de 1.5 ;</string>
    <string name="mp5">-Numéroter toutes les pages ;</string>
    <string name="mp7">-Tableaux et figures doivent posséder un numéro et un titre.</string>
    <string name="butrtr">Retour</string>
    <string name="butquitt">Quitter</string>
    <string name="bin">Bibliographie</string>
    <string name="br3">Retour</string>
    <string name="q">Quitter</string>
    <string name="plan">Plan</string>
    <string name="ch4">-Chaque chapitre doit contenir :</string>
    <string name="ch5">-Une petite introduction qui sert à identifier le problème.</string>
    <string name="contenu">" -Un contenu pour l'identification et l'évaluation des solutions, et la description des méthodes"</string>
    <string name="contenu2">" de recherche."</string>
    <string name="conclusion">-Une conclusion pour identifier la solution possible pour le problème posé.</string>
    <string name="cliqr">Retour</string>
    <string name="qt">Quitter</string>
    <string name="title_activity_def_bibliographie">DefBibliographieActivity</string>
    <string name="clicretour">Retour</string>
    <string name="clicquitter">Quitter</string>
    <string name="title_activity_ref_bibliographie">RefBibliographieActivity</string>
    <string name="clicr">Retour</string>
    <string name="clicquit">Quitter</string>
    <string name="title_activity_const_bibliographie">ConstBibliographieActivity</string>
    <string name="title_activity_liste_ref_bibliographie">ListeRefBibliographieActivity</string>
    <string name="title_activity_citation_bibliographie">CitationBibliographieActivity</string>
    <string name="title_activity_article_scientifique">ArticleScientifiqueActivity</string>
    <string name="title_activity_livre">LivreActivity</string>
    <string name="title_activity_these">TheseActivity</string>
    <string name="title_activity_doc_electronique">DocElectroniqueActivity</string>
    <string name="title_activity_logiciel">LogicielActivity</string>
    <string name="title_activity_modele">ModeleActivity</string>
    <string name="title_activity_orientation">OrientationActivity</string>
   

</resources>