<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/imgbib"
    tools:context=".BibliographieActivity" >
       <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:text="@string/bin"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
     

            <ListView
                android:id="@+id/lvbib"
                android:layout_width="fill_parent"
                android:layout_height="500dp"
                android:layout_weight="0.55" >
            </ListView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_weight="0.49" >

                <Button
                    android:id="@+id/buttq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q"
                    android:background="#0000ff" />

                <Button
                    android:id="@+id/butreto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:text="@string/br3"
                    android:background="#0000ff" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>